@@ -23,6 +23,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 === New features in 1.12 ===
 
 === Bug fixes in 1.12 ===
+* Subpages are now indexed for searching properly when using Postgres
 
 === API changes in 1.12 ===
 
